--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <br>
                                 <h2>Real-Time Computing Laboratory</h2>
                                 <br>
-                                <h3>Sungkyunkwan University (SKKU)</h3>
+                                <h3>Yonsei University</h3>
                                 <br>
                             </div>
                         </div>
@@ -181,6 +181,14 @@
                                                     <div class="subject">Prof. Jinkyu Lee published his papers at IEEE RTSS (Real-Time Systems Symposium) for 13 consecutive years.                                                    
                                                 </div>
                                             </li>
+                                            
+                                            <li class="open">
+                                                <div class="date">September 2025</div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">Prof. Jinkyu Lee is now with Yonsei University.</div>
+                                                </div>
+                                            </li>\
                                             
                                             <li class="open">
                                                 <div class="date">May 2025</div>
