--- a/jinkyulee.html
+++ b/jinkyulee.html
@@ -48,7 +48,7 @@
                                 <br>
                                 <h2>Real-Time Computing Laboratory</h2>
                                 <br>
-                                <h3>Sungkyunkwan University (SKKU)</h3>
+                                <h3>Yonsei University</h3>
                                 <br>
                             </div>
                         </div>
