--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
                                         <h4>
                                         <p> Real-Time Computing Laboratory,</p>
-                                        <p> College of Computing and Informatics, Sungkyunkwan University (SKKU),</p>
-                                        <p> #26314A (Stud.) and #27322B (Prof.), Engineering 2 Building, 2066 Seobu-ro, Jangan-gu, Suwon-si, Gyeonggi-do, Republic of Korea </p>
+                                        <p> College of Computing, Yonsei University,</p>
+                                        <!--<p> #26314A (Stud.) and #27322B (Prof.), Engineering 2 Building, 2066 Seobu-ro, Jangan-gu, Suwon-si, Gyeonggi-do, Republic of Korea </p>-->
                                         </h4>
                                         <h3>
                                         <br>
