--- a/recruit.html
+++ b/recruit.html
@@ -154,7 +154,7 @@
                                     </ul>
 
                                     <br><br>
-                                    <h2>RTCL@SKKU 지원 정보</h2>
+                                    <h2>RTCL@Yonsei 지원 정보</h2>
                                     <ul style="list-style-type:square">
                                     
                                     <br>
@@ -169,7 +169,7 @@
                                     <ul style="list-style-type:square">
                                     
                                     <br>
-                                    <li><p>지도교수와 시간 약속 후 인터뷰 jinkyu DOT lee AT skku DOT edu </p></li>
+                                    <li><p>지도교수와 시간 약속 후 인터뷰 jinkyu DOT lee AT yonsei DOT ac DOT kr </p></li>
                                     <li><p>연구실 적응 기간: 지도교수와 개인미팅을 통해 연구 진행 </p></li>
                                     <li><p>연구실 적응 기간 이후 개인 공간 및 연구비 제공  </p></li>
                                     </ul>
