--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <li class="currentmenu">
                                   <a href="index.html">
                                     <i class="fa fa-institution"></i>
-                                    <div class="text">RTCL@SKKU</div>
+                                    <div class="text">RTCL@Yonsei</div>
                                   </a>
                                 </li>
 
