--- a/research.html
+++ b/research.html
@@ -59,7 +59,7 @@
                                 <li>
                                   <a href="index.html">
                                     <i class="fa fa-institution"></i>
-                                    <div class="text">RTCL@SKKU</div>
+                                    <div class="text">RTCL@Yonsei</div>
                                   </a>
                                 </li>
 
