--- a/jinkyulee.html
+++ b/jinkyulee.html
@@ -135,14 +135,13 @@
                                      <div class="col-sm-12 col-md-9"> 
                                         <h3 class="title">Jinkyu Lee (이진규)</h3>
                                         <h4><p> <strong>Full Professor</strong> </p>
-                                        <h4><p> <strong>SKKU Fellow</strong> </p>
                                         <br>
                                         <p> Real-Time Computing Laboratory,</p>
-                                        <p> Department of Computer Science and Engineering, College of Computing and Informatics, </p>
-                                        <p> Sungkyunkwan University (SKKU),</p>
-                                        <p> #27322B, Engineering 2 Building, 2066 Seobu-ro, Jangan-gu, Suwon-si, Gyeonggi-do, Republic of Korea </p>
+                                        <p> Department of Computer Science and Engineering, College of Computing, </p>
+                                        <p> Yonsei University,</p>
+                                        <!--<p> #27322B, Engineering 2 Building, 2066 Seobu-ro, Jangan-gu, Suwon-si, Gyeonggi-do, Republic of Korea </p>-->
                                         <br>
-                                        <p> Email: jinkyu.lee AT skku.edu <p></h4>
+                                        <p> Email: jinkyu.lee AT yonsei.ac.kr <p></h4>
 
                                      </div>
 
