--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                             </li>
                                             
                                             <li class="open">
-                                                <div class="date">September 2025</div>
+                                                <div class="date">Sep. 2025</div>
                                                 <div class="circle"></div>
                                                 <div class="data">
                                                     <div class="subject">Prof. Jinkyu Lee is now with Yonsei University.</div>
