--- a/jinkyulee.html
+++ b/jinkyulee.html
@@ -256,6 +256,17 @@
                                             <li>
                                                 <div class="dates">
                                                     <span>Present</span>
+                                                    <span>Sep. 2025</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>Full Professor</h4>
+                                                    <p><em>Yonsei University, Republic of Korea</em></p>
+                                                </div>
+                                            </li>
+                                            <br><br>
+                                            <li>
+                                                <div class="dates">
+                                                    <span>Aug. 2025</span>
                                                     <span>Mar. 2014</span>
                                                 </div>
                                                 <div class="content">
