--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="pageheader">
                         <div class="headercontent">
                             <div class="section-container">
-                                <h2 class="title">Welcome to RTCL @ SKKU</h2>
+                                <h2 class="title">Welcome to RTCL @ Yonsei</h2>
                                 
                                 <div class="row">
                                 <!--<div class="clearfix visible-sm visible-xs"></div> -->
