--- a/research.html
+++ b/research.html
@@ -337,8 +337,7 @@
                                     <ul style="list-style-type:square">
                                 
                                     <br>
-                                    <li><p>지속성장 미래컴퓨팅 교육연구단, 2024.03 ~ [한국연구재단 BK21+ 소프트웨어학과]</p></li>
-                                    <li><p>소프트웨어 중심대학, 2021.04 ~ [IITP]</p></li>
+
 
 
 
@@ -377,6 +376,8 @@
                                     
                                     <br>
                                     <li><p>A project (연구분야: 실시간 시스템), 2023.09 ~ 2025.08 [세메스]</p></li>
+                                    <li><p>지속성장 미래컴퓨팅 교육연구단, 2024.03 ~ 2025.08 [한국연구재단 BK21+ 소프트웨어학과]</p></li>
+                                    <li><p>소프트웨어 중심대학, 2021.04 ~ 2025.08 [IITP]</p></li>
                                     <li><p>Smart Vehicle 분야 차세대 공학연구자 육성 사업단, 2017.05 ~ 2022.02 [한국연구재단]</p></li>
                                     <li><p>지속성장 ICT 미래인재교육연구단, 2020.09 ~ 2022.02 [한국연구재단 BK21+]</p></li>
                                     <li><p>A project (연구분야: 배터리 관리), 2018.02 ~ 2021.11 [삼성SDI]</p></li>
