--- a/recruit.html
+++ b/recruit.html
@@ -142,12 +142,12 @@
                                 <div class="row">
                                 <div class="col-md-11">
 
-                                    <h2>RTCL@SKKU 장점</h2>
+                                    <h2>RTCL@Yonsei 장점</h2>
                                     <ul style="list-style-type:square">
                                     
                                     <br>
                                     <li><p>지도교수와 1:1 개인 연구 미팅  </p></li>
-                                    <li><p>쾌적한 연구 환경: 넓은 책상, 듀얼 모니터, 자유로운 분위기 등 </p></li>
+                                    <!--<li><p>쾌적한 연구 환경: 넓은 책상, 듀얼 모니터, 자유로운 분위기 등 </p></li>-->
                                     <li><p>대학원생 등록금 100% + 생활비 지원</p></li>
                                     <li><p>국내/국제 학회 참석 </p></li>
                                     <li><p>자세한 내용은 선배들에게 문의 바람 </p></li>
