--- a/publications.html
+++ b/publications.html
@@ -181,6 +181,8 @@
                                             <ol reversed="reversed" class="normal">
 <!-------------------------------- Selected -------------------------------->
 
+                                                IJCAI, IROS, ICCAD, RTSS 
+
                                                 <div class="item mix cpaper spaper" data-year="202505">
                                                     <div class="pubmain">
                                                         <div class="pubassets">
