--- a/publications.html
+++ b/publications.html
@@ -129,7 +129,7 @@
                                             &nbsp&nbsp&nbsp- <b>22 papers</b> published in total<br>
                                             &nbsp&nbsp&nbsp- <b>13 consecutive years</b> published (2012-2024)</p>
                                             <p><b><i>Other Top-tier International Conference Papers</i></b> &nbsp  <br>
-                                            &nbsp&nbsp&nbsp- <b>MobiSys</b> 1, <b>RTAS</b> 8, <b>DAC</b> 1, <b>EMSOFT</b> 2, <b>ECRTS</b> 1, <b>ICCPS</b> 2, <b>ICPR</b> 3, <b>SAC</b> 2</p>
+                                            &nbsp&nbsp&nbsp- <b>MobiSys</b> 1, <b>RTAS</b> 8, <b>DAC</b> 1, <b>EMSOFT</b> 2, <b>ECRTS</b> 1, <b>ICCAD</b> 1, <b>IJCAI</b> 1, <b>IROS</b> 1, <b>ICCPS</b> 2, <b>ICPR</b> 3, <b>SAC</b> 2</p>
                                             <p><b><i>Top-tier International Journal Papers</i></b> &nbsp<br>
                                             &nbsp&nbsp&nbsp-  <b>TPDS</b> 7, <b>TC</b> 4, <b>TSE</b> 1, <b>IoT-J</b> 2, <b>TECS</b> 1, <b>TVCG</b> 1, <b>RTSJ</b> 2, <b>JSS</b> 8, <b>TVT</b> 1, <b>FGCS</b> 1, <b>TII</b> 1</p></h4>
                                             <br>
@@ -182,6 +182,44 @@
 <!-------------------------------- Selected -------------------------------->
 
                                                 IJCAI, IROS, ICCAD, RTSS 
+
+
+                                                <div class="item mix cpaper spaper" data-year="202508">
+                                                    <div class="pubmain">
+                                                        <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="fa fa-expand"></i>
+                                                            </a>
+                                                            <!--<a href="" class="tooltips" title="Bib" target="_blank">
+                                                                <i class="fa fa-file-alt"></i>
+                                                            </a>-->
+                                                            <a href="" class="tooltips" title="Link" target="_blank">
+                                                                <i class="fa fa-external-link"></i>
+                                                            </a>
+                                                            <a href="" class="tooltips" title="Download" target="_blank">
+                                                                <i class="fa fa-cloud-download"></i>
+                                                            </a>
+                                                        </div>
+                                                        <h4 class="pubtitle"><li>BankTweak: Adversarial Attack against Multi-Object Trackers by Manipulating Feature Banks</h4>
+                                                        <div class="pubauthor"> Woojin Shin, Donghwa Kang, Daejin Choi,  Brent Byunghoon Kang, <strong>Jinkyu Lee</strong>, Hyeongboo Baek </div>
+                                                        <div class="pubcite">The 34th International Joint Conference on Artificial Intelligence (IJCAI), To appear, Montreal, Canada, August 2025 </div>
+                                                        <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
+                                                    </div>     
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p> 
+                                                        </p>
+                                                        <br>
+                                                        <h4>Bibtex</h4>
+                                                        <p>
+                                                        </p>
+                                                        <br>
+                                                        <h4>Conference Information</h4>
+                                                        <p>
+                                                        </p>
+
+                                                    </div>
+                                                </div>
 
                                                 <div class="item mix cpaper spaper" data-year="202505">
                                                     <div class="pubmain">
