--- a/publications.html
+++ b/publications.html
@@ -181,8 +181,79 @@
                                             <ol reversed="reversed" class="normal">
 <!-------------------------------- Selected -------------------------------->
 
-                                                IJCAI, IROS, ICCAD, RTSS 
+                                                <div class="item mix cpaper spaper" data-year="202510">
+                                                    <div class="pubmain">
+                                                        <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="fa fa-expand"></i>
+                                                            </a>
+                                                            <!--<a href="" class="tooltips" title="Bib" target="_blank">
+                                                                <i class="fa fa-file-alt"></i>
+                                                            </a>-->
+                                                            <a href="" class="tooltips" title="Link" target="_blank">
+                                                                <i class="fa fa-external-link"></i>
+                                                            </a>
+                                                            <a href="" class="tooltips" title="Download" target="_blank">
+                                                                <i class="fa fa-cloud-download"></i>
+                                                            </a>
+                                                        </div>
+                                                        <h4 class="pubtitle"><li>Masked Autoencoders are Robust Task Offloaders for Timely and Accurate Inference</h4>
+                                                        <div class="pubauthor"> <strong>Wonyeong Le</strong>, <strong>Seunghoon Lee</strong>, <strong>Seungyeon Cho</strong>, <strong>Hyunwoo Koo</strong>, Hoon Sung Chwa<strong>Jinkyu Lee</strong></div>
+                                                        <div class="pubcite">The 38th IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), To appear, Hangzhou, China, October 2025 </div>
+                                                        <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
+                                                    </div>     
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p> 
+                                                        </p>
+                                                        <br>
+                                                        <h4>Bibtex</h4>
+                                                        <p>
+                                                        </p>
+                                                        <br>
+                                                        <h4>Conference Information</h4>
+                                                        <p>
+                                                        </p>
 
+                                                    </div>
+                                                </div>
+
+                                                <div class="item mix cpaper spaper" data-year="202510">
+                                                    <div class="pubmain">
+                                                        <div class="pubassets">
+                                                            <a href="#" class="pubcollapse">
+                                                                <i class="fa fa-expand"></i>
+                                                            </a>
+                                                            <!--<a href="" class="tooltips" title="Bib" target="_blank">
+                                                                <i class="fa fa-file-alt"></i>
+                                                            </a>-->
+                                                            <a href="" class="tooltips" title="Link" target="_blank">
+                                                                <i class="fa fa-external-link"></i>
+                                                            </a>
+                                                            <a href="" class="tooltips" title="Download" target="_blank">
+                                                                <i class="fa fa-cloud-download"></i>
+                                                            </a>
+                                                        </div>
+                                                        <h4 class="pubtitle"><li>EarDVFS: Environment-Adaptable RL-based DVFS for Mobile Devices</h4>
+                                                        <div class="pubauthor"> <strong>Jaeheon Kwak</strong>, Sanguen Oh, <strong>Jinkyu Lee</strong>, Insik Shin </div>
+                                                        <div class="pubcite">The 44th ACM/IEEE International Conference on Computer-Aided Design (ICCAD), To appear, Munich, Germany, October 2025 </div>
+                                                        <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
+                                                    </div>     
+                                                    <div class="pubdetails">
+                                                        <h4>Abstract</h4>
+                                                        <p> 
+                                                        </p>
+                                                        <br>
+                                                        <h4>Bibtex</h4>
+                                                        <p>
+                                                        </p>
+                                                        <br>
+                                                        <h4>Conference Information</h4>
+                                                        <p>
+                                                        </p>
+
+                                                    </div>
+                                                </div>
 
                                                 <div class="item mix cpaper spaper" data-year="202508">
                                                     <div class="pubmain">
