--- a/publications.html
+++ b/publications.html
@@ -198,7 +198,7 @@
                                                             </a>
                                                         </div>
                                                         <h4 class="pubtitle"><li>Masked Autoencoders are Robust Task Offloaders for Timely and Accurate Inference</h4>
-                                                        <div class="pubauthor"> <strong>Wonyeong Le</strong>, <strong>Seunghoon Lee</strong>, <strong>Seungyeon Cho</strong>, <strong>Hyunwoo Koo</strong>, Hoon Sung Chwa<strong>Jinkyu Lee</strong></div>
+                                                        <div class="pubauthor"> <strong>Wonyeong Le</strong>, <strong>Seunghoon Lee</strong>, <strong>Seungyeon Cho</strong>, <strong>Hyunwoo Koo</strong>, Hoon Sung Chwa, <strong>Jinkyu Lee</strong></div>
                                                         <div class="pubcite">The 38th IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), To appear, Hangzhou, China, October 2025 </div>
                                                         <span class="label label-primary">Selected</span><span class="label label-warning">Conference Paper</span>
                                                     </div>     
