--- a/research.html
+++ b/research.html
@@ -219,7 +219,7 @@
                                                     <br><a href="https://ieeexplore.ieee.org/document/9739684">Read a review article.</a>
                                                     </p> 
                                                     <br>
-                                                    <p><strong>Related Selected Publications:</strong> RTSS2024b, EMSOFT2024, DAC2024, RTAS2024, RTSS2022a, RTAS2022, RTSS2021, RTAS2021</p>
+                                                    <p><strong>Related Selected Publications:</strong> IROS2025, RTSS2024b, EMSOFT2024, DAC2024, RTAS2024, RTSS2022a, RTAS2022, RTSS2021, RTAS2021</p>
                                                 </div>
                                             </li>
                                             
@@ -282,7 +282,7 @@
                                                     and Internet of Things (IoT). We also improve the performance of mobile systems.
                                                     </p>
                                                     <br>
-                                                    <p><strong>Related Selected Publications:</strong> MobiSys2023, IEEESensors2022, PAUC2020</p>
+                                                    <p><strong>Related Selected Publications:</strong> ICCAD2025, MobiSys2023, IEEESensors2022, PAUC2020</p>
                                                 </div>
                                             </li>
                                             
