--- a/members.html
+++ b/members.html
@@ -226,7 +226,7 @@
                                     <br>
                                     
                                     <li><p style="font-size:18px">Jaeheon Kwak (곽재헌)</p>
-                                    Postdoc.: CS@KAIST 2024.3-2025.8(Advisor@KAIST: Insik Shin, Co-Advisor@SKKU: Jinkyu Lee)</p> 
+                                    Postdoc.: CS@KAIST 2024.3-2025.8 (Advisor@KAIST: Insik Shin, Co-Advisor@SKKU: Jinkyu Lee)
                                     <br>Now: Assistant Professor at Software@Ajou (Ajou University)
                                     <br>Homepage: <a href="https://0jaehunny0.github.io">https://0jaehunny0.github.io</a>
                                     <br>
