--- a/members.html
+++ b/members.html
@@ -226,6 +226,9 @@
                                     <br>
                                     
                                     <li><p style="font-size:18px">Jaeheon Kwak (곽재헌)</p>
+                                    B.S.: CSE@SKKU, 2017.8<br>
+                                    M.S.: CSE@SKKU, 2019.2 (Advisor: Jinkyu Lee)<br>
+                                    Ph.D.: CS@KAIST, 2024.2 (Advisor@KAIST: Insik Shin, Co-Advisor@SKKU: Jinkyu Lee)<br>
                                     Postdoc.: CS@KAIST 2024.3-2025.8 (Advisor@KAIST: Insik Shin, Co-Advisor@SKKU: Jinkyu Lee)
                                     <br>Now: Assistant Professor at Software@Ajou (Ajou University)
                                     <br>Homepage: <a href="https://0jaehunny0.github.io">https://0jaehunny0.github.io</a>
