--- a/courses.html
+++ b/courses.html
@@ -138,6 +138,30 @@
                                 <div class="section-container">
                                     <div class="row">
                                     <ul class="ul-dates">
+                                        <li>
+                                            <div class="dates">
+                                                <span>2025</span>
+                                                <span>Fall</span>
+                                            </div>
+                                            <div class="content">
+                                                <h4></h4>
+                                                <h4></h4>
+                                                <h4>&nbsp</h4>
+                                                <br>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="dates">
+                                                <span>2025</span>
+                                                <span>Spring</span>
+                                            </div>
+                                            <div class="content">
+                                                <h4>CSE3036: <strong>Seminar in Computer Engineering</strong> (1)</h4>
+                                                <h4>GELT001: <strong>SKKU Freshmen Seminar</strong> (1)</h4>
+                                                <h4>&nbsp</h4>
+                                                <br>
+                                            </div>
+                                        </li>
                                         <br><br>
                                         <li>
                                             <div class="dates">
