--- a/courses.html
+++ b/courses.html
@@ -138,6 +138,7 @@
                                 <div class="section-container">
                                     <div class="row">
                                     <ul class="ul-dates">
+                                        <br><br>
                                         <li>
                                             <div class="dates">
                                                 <span>2025</span>
@@ -156,21 +157,20 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>CSE3036: <strong>Seminar in Computer Engineering</strong> (1)</h4>
-                                                <h4>GELT001: <strong>SKKU Freshmen Seminar</strong> (1)</h4>
+                                                <h4>(SKKU) CSE3036: <strong>Seminar in Computer Engineering</strong> (1)</h4>
+                                                <h4>(SKKU) GELT001: <strong>SKKU Freshmen Seminar</strong> (1)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
                                         </li>
-                                        <br><br>
                                         <li>
                                             <div class="dates">
                                                 <span>2024</span>
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE3060: <strong>Introduction to Real-Time Systems</strong> (3)</h4>
-                                                <h4>ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) SWE3060: <strong>Introduction to Real-Time Systems</strong> (3)</h4>
+                                                <h4>(SKKU) ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -181,8 +181,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
-                                                <h4>ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
+                                                <h4>(SKKU) ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
