--- a/courses.html
+++ b/courses.html
@@ -193,8 +193,8 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2026: <strong>Problem Solving Techniques</strong> (3)</h4>
-                                                <h4>SWE3060: <strong>Introduction to Real-Time Systems</strong> (3)</h4>
+                                                <h4>(SKKU) SWE2026: <strong>Problem Solving Techniques</strong> (3)</h4>
+                                                <h4>(SKKU) SWE3060: <strong>Introduction to Real-Time Systems</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -205,8 +205,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>GEDT019: <strong>Basic and Practice in Programming</strong> (3)</h4>
-                                                <h4>ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) GEDT019: <strong>Basic and Practice in Programming</strong> (3)</h4>
+                                                <h4>(SKKU) ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -218,8 +218,8 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2026: <strong>Problem Solving Techniques</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) SWE2026: <strong>Problem Solving Techniques</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -231,8 +231,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
-                                                <h4>ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
+                                                <h4>(SKKU) ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4> 
                                                 <br>
                                             </div>
@@ -244,8 +244,8 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2026: <strong>Problem Solving Techniques</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) SWE2026: <strong>Problem Solving Techniques</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -257,8 +257,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
-                                                <h4>ECE5756: <strong>Real-Time Systems Special Topics</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
+                                                <h4>(SKKU) ECE5756: <strong>Real-Time Systems Special Topics</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -270,8 +270,8 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
-                                                <h4>GEDB029: <strong>Basic Programming and Practice</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) GEDB029: <strong>Basic Programming and Practice</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -283,9 +283,9 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
-                                                <h4>ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
                                                 <br>
                                             </div>
                                         </li>
@@ -297,7 +297,7 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2016: <strong>Introduction to Algorithms</strong> (3)</h4>
+                                                <h4>(SKKU) SWE2016: <strong>Introduction to Algorithms</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
@@ -310,8 +310,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) SWE2015: <strong>Introduction to Data Structures</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -324,9 +324,9 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>CSE2011: <strong>Problem Solving</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
-                                                <h4>ECE5756: <strong>Real-Time Systems Special Topics</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) CSE2011: <strong>Problem Solving</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) ECE5756: <strong>Real-Time Systems Special Topics</strong> (3) [graduate-level]</h4>
                                                 <br>
                                             </div>
                                         </li>
@@ -336,8 +336,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
-                                                <h4>ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) ESW5012: <strong>Topics in Real-Time Systems for Software Platforms</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -350,9 +350,9 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>CSE2011: <strong>Problem Solving</strong> (3)</h4>
-                                                <h4>CSE2014: <strong>Basic Programming Languages</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) CSE2011: <strong>Problem Solving</strong> (3)</h4>
+                                                <h4>(SKKU) CSE2014: <strong>Basic Programming Languages</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
                                                 <br>
                                             </div>
                                         </li>
@@ -362,8 +362,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
-                                                <h4>ECE5756: <strong>Real-Time Systems Special Topics</strong> (3) [graduate-level]</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) ECE5756: <strong>Real-Time Systems Special Topics</strong> (3) [graduate-level]</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -376,9 +376,9 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>CSE2011: <strong>Problem Solving</strong> (3)</h4>
-                                                <h4>CSE2014: <strong>Basic Programming Languages</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) CSE2011: <strong>Problem Solving</strong> (3)</h4>
+                                                <h4>(SKKU) CSE2014: <strong>Basic Programming Languages</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
                                                 <br>
                                             </div>
                                         </li>
@@ -388,8 +388,8 @@
                                                 <span>Fall</span>
                                             </div>
                                             <div class="content">
-                                                <h4>CSE2011: <strong>Problem Solving</strong> (3)</h4>
-                                                <h4>ICE3037: <strong>Capstone Design</strong> (3)</h4>
+                                                <h4>(SKKU) CSE2011: <strong>Problem Solving</strong> (3)</h4>
+                                                <h4>(SKKU) ICE3037: <strong>Capstone Design</strong> (3)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
@@ -402,8 +402,8 @@
                                                 <span>Spring</span>
                                             </div>
                                             <div class="content">
-                                                <h4>CSE3036: <strong>Seminar in Computer Engineering</strong> (1)</h4>
-                                                <h4>ICE2010: <strong>Introduction to Computer Engineering</strong> (2)</h4>
+                                                <h4>(SKKU) CSE3036: <strong>Seminar in Computer Engineering</strong> (1)</h4>
+                                                <h4>(SKKU) ICE2010: <strong>Introduction to Computer Engineering</strong> (2)</h4>
                                                 <h4>&nbsp</h4>
                                                 <br>
                                             </div>
